<resources>
    <string name="app_name">Base</string>
    <string name="loginTitle">Log into your account.</string>
    <string name="email">Email</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="login">Login</string>
    <string name="doNotHaveAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpTitle">Get started for free.</string>
    <string name="fullName">Full Name</string>
    <string name="reEnterPassword">Re - Enter Password</string>
    <string name="signUpTermsText">By signing up, I agree to the terms of service and privacy
        policy.
    </string>
    <string name="createAccount">Create an account</string>
    <string name="confirm">Confirm</string>
    <string name="disconnectText">Are you sure you want to get disconnected from %s?
    </string>
    <string name="disconnect">Disconnect</string>
    <string name="save">Save</string>
    <string name="portPopupMessage">Select the port you would like to use.</string>
    <string name="portNo">Port</string>
    <string name="encryptionPopupMessage">Select your desired encryption type.</string>
    <string name="encryptionPopup">Encryption</string>
    <string name="allServers">Show all servers</string>
    <string name="connect">Connect</string>
    <string name="stateConnectedDotText">⬤ Connected</string>
    <string name="stateNotConnectedDotText">⬤ Not Connected</string>
    <string name="stateConnectingDotText">⬤ Connecting</string>
    <string name="stateConnectedText">Connected</string>
    <string name="stateNotConnectedText">Not Connected</string>
    <string name="stateConnectingText">Connecting</string>
    <string name="encryptionType">Encryption type</string>
    <string name="portNoServer">Port</string>
    <string name="loginText">Login</string>
    <string name="logout">Logout</string>
    <string name="expiration">Expiration</string>
    <string name="defaultDNS">Default DNS</string>
    <string name="dnsPopupMessage">Set your primary and secondary DNS.</string>
    <string name="primaryDNS">Primary DNS</string>
    <string name="secondaryDNS">Secondary DNS</string>
    <string name="settingsTitle">Settings</string>
    <string name="manageYourAccount">Manage your account</string>
    <string name="accountDetails">Account details</string>
    <string name="plan">Plan</string>
    <string name="killSwitch">Kill switch</string>
    <string name="killSwitchText">App will terminates any Internet connection when the VPN itself
        disconnects.
    </string>
    <string name="autoConnectText">App will auto-connect to VPN when your device connects to a WiFi without a password.
    </string>
    <string name="autoConnect">Auto-connect on public WiFi</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="autoConnectOnLaunch">Auto-connect on launch</string>
    <string name="autoConnectOnLaunchText">App will automatically connect to the nearest server when
        launched.
    </string>
    <string name="displayAllServers">Display all servers</string>
    <string name="displayAllServersText">You can choose to either see all available servers or only
        the main hubs only.
    </string>
    <string name="logoutText">Logout from your account. Please note, logging out will terminate all
        connections.
    </string>
    <string name="customerService">Customer service</string>
    <string name="contactUs">Contact us now</string>
    <string name="contactUsText">Are you stuck with something? Let’s get in touch. We will help you
        troubleshoot your problems.
    </string>
    <string name="splashText">Establishing a secure connection…</string>
    <string name="shopNow">Show now</string>
    <string name="christmasOffer">Buy membership</string>
    <string name="christmasOfferTextFirst">From December 15th to January 5th, we are offering a special
        discount of 50% off all our memberships.
    </string>
    <string name="christmasOfferTextSecond">Simply use voucher code “XMAS50” on your purchase.
    </string>
    <string name="onBoardingTitleOne">Protect your Internet</string>
    <string name="onBoardingTextOne">Your VPN account will allow you to secure your Internet
        connection and make you switch countries online.
    </string>
    <string name="onBoardingTitleTwo"><![CDATA[Secure & anonymous]]></string>
    <string name="onBoardingTitleThree">Unblock any content</string>
    <string name="onBoardingTitleFour">Control your assets</string>
    <string name="onBoardingTitleFive">24/7 customer service</string>
    <string name="onBoardingTitleSix">100% non-logging</string>
    <string name="onBoardingTextSix">We don’t log any activity of customers connected to our
        service. Period. Your privacy is paramount.
    </string>
    <string name="onBoardingTextFive">Our award-winning customer service agents are ready to help
        you all day, every day.
    </string>
    <string name="onBoardingTextFour">Make online payments safely and securely. Your card and
        account information is safe and secure.
    </string>
    <string name="onBoardingTextThree">Ultra fast VPN servers across 94 countries. Unblock the sites
        and apps you love, instantly.
    </string>
    <string name="onBoardingTextTwo">Browse with confidence while you\'re connected to public wifi
        and other untrusted networks.
    </string>
    <string name="appLogs">App Logs</string>
    <string name="vpnLogs">VPN Logs</string>
    <string name="copyToClipboard">Copy Logs</string>
    <string name="close">Close</string>
    <string name="copiedToClipboard">Copied to clipboard</string>
    <string name="mapView">Map view</string>
    <string name="serverList">Server list</string>
    <string name="notifications">Notification</string>
    <string name="showLogs">Show logs</string>
    <string name="shop">Shop</string>
    <string name="settings">Settings</string>
    <string name="noLogs">No logs so far, please connect to preferred server to see some logs.</string>
    <string name="beginTheExperience">Begin the experience</string>
    <string name="numberOptionsAvailable">%d Options Available</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="openVPN">OpenVPN</string>
    <string name="username">Username</string>
    <string name="unhandled_exception_context">%3$s: %1$s\n\n%2$s</string>
    <string name="unhandled_exception">Unhandled exception: %1$s\n\n%2$s</string>
    <string name="state_waitconnectretry">Waiting %ss seconds between connection attempt</string>
    <string name="mobile_info">%10$s %9$s running on %3$s %1$s (%2$s), Android %6$s (%7$s) API %4$d, ABI %5$s, (%8$s)</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_wait">Waiting for server reply</string>
    <string name="state_auth">Authenticating</string>
    <string name="state_get_config">Getting client configuration</string>
    <string name="state_assign_ip">Assigning IP addresses</string>
    <string name="state_add_routes">Adding routes</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnect</string>
    <string name="state_reconnecting">Reconnecting</string>
    <string name="state_exiting">Exiting</string>
    <string name="state_noprocess">Not running</string>
    <string name="state_resolve">Resolving host names</string>
    <string name="state_tcp_connect">Connecting (TCP)</string>
    <string name="state_auth_failed">Authentication failed</string>
    <string name="state_nonetwork">Waiting for usable network</string>
    <string name="state_waitorbot">Waiting for Orbot to start</string>
    <string name="state_auth_pending">Authentication pending</string>
    <string name="state_userpause">VPN pause requested by user</string>
    <string name="state_screenoff">VPN paused - screen off</string>
    <string name="unknown_state">Unknown state</string>
    <string name="bits_per_second">%.0f bit/s</string>
    <string name="kbits_per_second">%.1f kbit/s</string>
    <string name="mbits_per_second">%.1f Mbit/s</string>
    <string name="gbits_per_second">%.1f Gbit/s</string>
    <string name="volume_byte">%.0f B</string>
    <string name="volume_kbyte">%.1f kB</string>
    <string name="volume_mbyte">%.1f MB</string>
    <string name="volume_gbyte">%.1f GB</string>
    <string name="permission_revoked">VPN permission revoked by OS (e.g. other VPN program started), stopping VPN</string>
    <string name="notifcation_title">OpenVPN - %s</string>
    <string name="notifcation_title_notconnect">Not connected</string>
    <string name="official_build">official build</string>
    <string name="debug_build">debug build</string>
    <string name="built_by">built by %s</string>
    <string name="reread_log">Reread (%d) log items from log cache file</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="pauseVPN">Pause VPN</string>
    <string name="resumevpn">Resume VPN</string>
    <string name="building_configration">Building configuration…</string>
    <string name="service_restarted">Restarting OpenVPN Service (App crashed probably crashed or killed for memory pressure)</string>
    <string name="last_openvpn_tun_config">Opening tun interface:</string>
    <string name="opentun_no_ipaddr">Refusing to open tun device without IP information</string>
    <string name="dns_add_error">Could not add DNS Server \"%1$s\", rejected by the system: %2$s</string>
    <string name="ip_add_error">Could not configure IP Address \"%1$s\", rejected by the system: %2$s</string>
    <string name="ignore_multicast_route">Ignoring multicast route: %s</string>
    <string name="route_rejected">Route rejected by Android</string>
    <string name="local_ip_info">Local IPv4: %1$s/%2$d IPv6: %3$s MTU: %4$d</string>
    <string name="dns_server_info">DNS Server: %1$s, Domain: %2$s</string>
    <string name="routes_info_incl">Routes: %1$s %2$s</string>
    <string name="routes_info_excl">Routes excluded: %1$s %2$s</string>
    <string name="routes_debug">VpnService routes installed: %1$s %2$s</string>
    <string name="session_ipv6string">%1$s - %3$s, %2$s</string>
    <string name="session_ipv4string">%1$s - %2$s</string>
    <string name="warn_no_dns">No DNS servers being used. Name resolution may not work. Consider setting custom DNS Servers. Please also note that Android will keep using your proxy settings specified for your mobile/Wi-Fi connection when no DNS servers are set.</string>
    <string name="tun_open_error">Failed to open the tun interface</string>
    <string name="error">"Error: "</string>
    <string name="tun_error_helpful">On some custom ICS images the permission on /dev/tun might be wrong, or the tun module might be missing completely. For CM9 images try the fix ownership option under general settings</string>
    <string name="app_no_longer_exists">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="no_allowed_app">No allowed app added. Adding ourselves (%s) to have at least one app in the allowed app list to not allow all apps</string>
    <string name="disallowed_vpn_apps_info">Disallowed VPN apps: %1$s</string>
    <string name="allowed_vpn_apps_info">Allowed VPN apps: %1$s</string>
    <string name="route_not_cidr">Cannot make sense of %1$s and %2$s as IP route with CIDR netmask, using /32 as netmask.</string>
    <string name="route_not_netip">Corrected route %1$s/%2$s to %3$s/%2$s</string>
    <string name="ip_not_cidr">Got interface information %1$s and %2$s, assuming second address is peer address of remote. Using /32 netmask for local IP. Mode given by OpenVPN is \"%3$s\".</string>
</resources>