<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupContainerBackground"
    android:fitsSystemWindows="false"
    tools:ignore="MissingPrefix">

    <android.support.v7.widget.CardView
        android:id="@+id/messageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/disconnect"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/popupBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPaddingBottom="30dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:contentPaddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/roboto_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/mainColor"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/disconnectTextView"
                fontPath="fonts/roboto_medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/disconnectText"
                android:textColor="@color/popupText"
                android:textSize="18sp"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/disconnect"
        style="@style/AppButton"
        fontPath="fonts/roboto_bold.ttf"
        android:layout_above="@+id/cancel"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/buttonRed"
        android:text="@string/disconnect"
        android:textColor="@color/mainWhite"/>

    <Button
        android:id="@+id/cancel"
        style="@style/AppButton"
        fontPath="fonts/roboto_bold.ttf"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/hintColor"
        android:text="@string/cancel"
        android:textColor="@color/mainWhite"/>


</RelativeLayout>
