<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_back"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomContainer"
        android:layout_below="@+id/back"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/app_logotype"/>

            <TextView
                fontPath="fonts/roboto_bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/loginTitle"
                android:textColor="@color/mainBlack"
                android:textSize="24sp"/>

            <android.support.v7.widget.CardView
                style="@style/LoginInputContainer"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/mainWhite"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    style="@style/LoginTextInputLayout"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/emailEditText"
                        style="@style/LoginTextInputEditText"
                        fontPath="fonts/roboto_medium.ttf"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@id/passwordEdiText"/>

                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/LoginInputContainer"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/mainWhite"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    style="@style/LoginTextInputLayout"
                    app:hintTextAppearance="@style/HintText"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/hintColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordEdiText"
                        style="@style/LoginTextInputEditText"
                        fontPath="fonts/roboto_medium.ttf"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp">

                <LinearLayout
                    android:id="@+id/checkboxContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rememberMeCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_checkbox"/>

                    <TextView
                        fontPath="fonts/roboto_medium.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="5dp"
                        android:text="@string/rememberMe"
                        android:textColor="@color/mainBlack"
                        android:textSize="16sp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/forgotPassword"
                    fontPath="fonts/roboto_medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="8dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="5dp"
                    android:text="@string/forgotPassword"
                    android:textColor="@drawable/selector_main_color_darker_text"
                    android:textSize="16sp"
                    android:visibility="gone"/>

            </RelativeLayout>

            <Button
                android:id="@+id/login"
                style="@style/AppButton"
                fontPath="fonts/roboto_bold.ttf"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/mainColor"
                android:text="@string/login"
                android:textColor="@color/mainWhite"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/mainBackground"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/roboto_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/doNotHaveAccount"
            android:textColor="@color/mainBlack"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/signUpButton"
            style="@style/AppButton"
            fontPath="fonts/roboto_bold.ttf"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/mainWhite"
            android:text="@string/signUp"
            android:textColor="@color/mainColor"/>

    </LinearLayout>
</RelativeLayout>